--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "jspdf-react": "^1.0.11",
     "querystring": "^0.2.1"
   }
 }
