--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "autoprefixer": "^10.4.17",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "jspdf-react": "^1.0.11",
-    "querystring": "^0.2.1"
+    "postcss": "^8.4.33",
+    "querystring": "^0.2.1",
+    "tailwindcss": "^3.4.1"
   }
 }
